force-app/main/default/objects/Tonnage__c/Tonnage__c.object-meta.xml
<CustomObject>
    <label>Tonnage</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Tonnage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tonnages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>