force-app/main/default/objects/Tonnage__c/fields/DailyDispatch__c.field-meta.xml
<CustomField>
    <fullName>DailyDispatch__c</fullName>
    <label>Daily Dispatch</label>
    <referenceTo>DailyDispatch__c</referenceTo>
    <relationshipLabel>Tonnages</relationshipLabel>
    <relationshipName>Tonnages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>