force-app/main/default/objects/Tonnage__c/fields/Date_of_Round__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Round__c</fullName>
    <label>Date of Round</label>
    <type>Date</type>
</CustomField>