force-app/main/default/objects/Tonnage__c/fields/Date_Round__c.field-meta.xml
<CustomField>
    <fullName>Date_Round__c</fullName>
    <formula>DailyDispatch__r.Dispatch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Round</label>
    <type>Date</type>
</CustomField>