force-app/main/default/objects/Tonnage__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <formula>IF(Transaction_Type__c = &quot;OUT&quot;,  Vehicle_Weight__c -  Weight_kg__c ,   Weight_kg__c -  Vehicle_Weight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>