force-app/main/default/objects/Tonnage__c/fields/Origin_Depot__c.field-meta.xml
<CustomField>
    <fullName>Origin_Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The depot the waste came from. Primarily used to separate bike tonnage from Camley and Hoxton.</description>
    <inlineHelpText>The depot the waste came from. Primarily used to separate bike tonnage from Camley and Hoxton.</inlineHelpText>
    <label>Origin Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Tonnages</relationshipLabel>
    <relationshipName>Tonnages</relationshipName>
    <type>Lookup</type>
</CustomField>