force-app/main/default/objects/Tonnage__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fat Management</fullName>
            </value>
            <value>
                <fullName>Pulse</fullName>
            </value>
            <value>
                <fullName>RSL</fullName>
            </value>
            <value>
                <fullName>Wilrose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>