force-app/main/default/objects/Tonnage__c/fields/Recycled__c.field-meta.xml
<CustomField>
    <fullName>Recycled__c</fullName>
    <formula>IF(ISPICKVAL(Type_of_Waste__c, &quot;Waste&quot;), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recycled?</label>
    <type>Checkbox</type>
</CustomField>