force-app/main/default/objects/Tonnage__c/fields/Site_of_Tip__c.field-meta.xml
<CustomField>
    <fullName>Site_of_Tip__c</fullName>
    <label>Site of Tip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tips</valueSetName>
    </valueSet>
</CustomField>