force-app/main/default/objects/Tonnage__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>The ticket number from the invoice. Used to show matched tonnages.</description>
    <inlineHelpText>The ticket number from the invoice. Used to show matched tonnages.</inlineHelpText>
    <label>Ticket Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>