force-app/main/default/objects/Tonnage__c/fields/Time_of_Tip__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Tip__c</fullName>
    <label>Time of Tip</label>
    <type>Time</type>
</CustomField>