force-app/main/default/objects/Tonnage__c/fields/Tonnes__c.field-meta.xml
<CustomField>
    <fullName>Tonnes__c</fullName>
    <formula>Weight_kg__c/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tonnes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>