force-app/main/default/objects/Tonnage__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>It indicates what kind of tonnage it is, if it is a recording of a vehicle getting in or a vehicle getting out</description>
    <label>Transaction Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>