force-app/main/default/objects/Tonnage__c/fields/Type_of_Waste__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Waste__c</fullName>
    <label>Type of Waste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Aluminum Tubes</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Biodegradable</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>Coat Hangers</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Coffee Cups</fullName>
            </value>
            <value>
                <fullName>Cooking Oil</fullName>
            </value>
            <value>
                <fullName>Flexible Plastics</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Fridges</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Helium Canisters</fullName>
            </value>
            <value>
                <fullName>Light Bulbs</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Non Clinical Medical</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Plastics</fullName>
            </value>
            <value>
                <fullName>Recycling</fullName>
            </value>
            <value>
                <fullName>Rubber (wellies/tyres)</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
            <value>
                <fullName>Toners &amp; Cartridges</fullName>
            </value>
            <value>
                <fullName>Waste</fullName>
            </value>
            <value>
                <fullName>WEEE</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
                <isActive>false</isActive>
                <label>Confidential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>