force-app/main/default/objects/Tonnage__c/fields/Vehicle_Reg__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Reg__c</fullName>
    <formula>DailyDispatch__r.Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Reg</label>
    <type>Text</type>
</CustomField>