force-app/main/default/objects/Tonnage__c/fields/Vehicle_Weight__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Weight__c</fullName>
    <formula>IF( ISNULL( DailyDispatch__r.Vehicle__c ) , DailyDispatch__r.RoundId__r.Default_Vehicle__r.Tare_Weight__c , DailyDispatch__r.Vehicle__r.Tare_Weight__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Tare Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>