force-app/main/default/objects/Tonnage__c/fields/Weightbridge_Id__c.field-meta.xml
<CustomField>
    <fullName>Weightbridge_Id__c</fullName>
    <externalId>true</externalId>
    <label>Weightbridge_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>