force-app/main/default/objects/Tonnage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DailyDispatch__c</columns>
    <columns>Date_Round__c</columns>
    <columns>Weight_kg__c</columns>
    <columns>Site_of_Tip__c</columns>
    <columns>Type_of_Waste__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Round_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Waste__c</field>
        <operation>equals</operation>
        <value>Recycling</value>
    </filters>
    <filters>
        <field>Date_Round__c</field>
        <operation>greaterThan</operation>
        <value>6/1/2026</value>
    </filters>
    <filters>
        <field>Site_of_Tip__c</field>
        <operation>equals</operation>
        <value>Weighbridge,Sacktory</value>
    </filters>
    <label>All</label>
</ListView>