force-app/main/default/objects/Tonnage__c/listViews/Rob_s_View.listView-meta.xml
<ListView>
    <fullName>Rob_s_View</fullName>
    <columns>NAME</columns>
    <columns>DailyDispatch__c</columns>
    <columns>Type_of_Waste__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tonnes__c</columns>
    <columns>Time_of_Tip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site_of_Tip__c</field>
        <operation>equals</operation>
        <value>Weighbridge</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Weighbridge Tonnages</label>
</ListView>