force-app/main/default/objects/Tonnage__c/listViews/weighbridge_tonnage.listView-meta.xml
<ListView>
    <fullName>weighbridge_tonnage</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Weightbridge_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>weighbridge tonnage</label>
</ListView>