force-app/main/default/objects/Tonnage__c/listViews/Weighbridge_tonnages.listView-meta.xml
<ListView>
    <fullName>Weighbridge_tonnages</fullName>
    <columns>NAME</columns>
    <columns>Round_Name__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Vehicle_Weight__c</columns>
    <columns>Weight_kg__c</columns>
    <columns>DailyDispatch__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site_of_Tip__c</field>
        <operation>equals</operation>
        <value>Weighbridge</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/15/2026 12:00 AM</value>
    </filters>
    <label>Weighbridge tonnages</label>
</ListView>